[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://blender/bücherwurm/SprechblaseEckigMitWeiß.png" type="Texture" id=2]
[ext_resource path="res://blender/bücherwurm/BuecherwurmLipng-ohne.png" type="Texture" id=3]
[ext_resource path="res://blender/bücherwurm/bücherwurmLayer.gd" type="Script" id=4]
[ext_resource path="res://UI/Cross.png" type="Texture" id=5]
[ext_resource path="res://audio/tastenklick.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 1 )

[node name="BücherwurmLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Bücherwurm" type="TextureRect" parent="."]
margin_left = 21.0
margin_top = 362.0
margin_right = 457.0
margin_bottom = 795.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Sprechblase" type="TextureButton" parent="."]
margin_left = 156.0
margin_top = 191.0
margin_right = 2204.0
margin_bottom = 2239.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprechblase"]
anchor_left = 0.214
anchor_top = 0.206
anchor_right = 0.214
anchor_bottom = 0.206
margin_left = 75.0612
margin_top = 91.445
margin_right = 1419.06
margin_bottom = 744.445
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sehr gut, du hast alle Codes für den Tresor gefunden, jetzt aber schnell!"
autowrap = true

[node name="Close" type="TextureButton" parent="."]
margin_left = 460.0
margin_top = 243.0
margin_right = 1103.0
margin_bottom = 890.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 5 )

[node name="pressKeySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="Sprechblase" to="." method="_on_Sprechblase_pressed"]
[connection signal="pressed" from="Close" to="." method="_on_Close_pressed"]
